<resources>
    <string name="app_name">Scabits</string>
    <string name="catch_phrase" translatable="false">Scanne tes habitudes</string>
    <string name="sign_in" translatable="false">Connexion</string>
    <string name="sign_up" translatable="false">Inscription</string>
    <string name="password" translatable="false">Mot de passe</string>
    <string name="login" translatable="false">Pseudo</string>
    <string name="analysis" translatable="false">Prochaine prise de données dans :</string>
    <string name="expected" translatable="false">Estimation</string>
    <string name="activity" translatable="false">Activité</string>
    <string name="sensors_used" translatable="false">Capteurs utilisés</string>
    <string name="real_activity" translatable="false">Image de l\'activité</string>
    <string name="validate_symbol" translatable="false">Symbol de validation ou invalidation</string>
    <string name="show_activities_history" translatable="false">Historique de vos habitudes</string>
    <string name="notification_question">Quelle activité êtes-vous en train de faire ?</string>
    <string name="shopping">Magasiner</string>
    <string name="watching_tv">Regarder la télévision</string>
    <string name="cooking">Cuisiner</string>
    <string name="working_out">Faire du sport</string>
    <string name="sleeping">Dormir</string>
    <string name="working">Travailler</string>
    <string name="reading">Lire</string>
    <string name="commuting">Prendre les transports</string>
    <string name="playing_games">Jouer à des jeux</string>
    <string name="hint_projet">Description of the projet here</string>
    <string name="location_home">Adresse du domicile</string>
    <string name="add_check">Lancer la prise de données</string>
    <string name="logo_description">Logo de l\'application</string>
    <string name="basic_time">08/07/2000 \n 11:17</string>
    <string name="historic_no_item">Aucune activité n\'a encore été enregistré</string>
    <string name="example_time">10:15</string>
    <string name="country">Région et pays</string>
    <string name="welcome">Bienvenue</string>
    <string name="canalId">CanalID</string>
    <string name="canalTitle">CanalTitle</string>
    <string name="canalDesc">Test du canal</string>
    <string name="call">Téléphoner</string>
    <string name="eat">Manger</string>
    <string name="hint_apps">Hint apps</string>
    <string name="settings">settings</string>
    <string name="text_password_config">Entrer le mot de passe administrateur</string>
    <string name="timeParent">Changer l\'intervalle de temps entre chaque prise de données</string>
    <string name="timeChild">Changer la durée de la prise de données</string>
    <string-array name="timeParent">
        <item>1h</item>
        <item>3h</item>
        <item>5h</item>
        <item>7h</item>
        <item>10h</item>
    </string-array>
    <string-array name="timeChild">
        <item>10s</item>
        <item>30s</item>
        <item>45s</item>
        <item>60s</item>
    </string-array>
</resources>
