<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/new_background"
    >

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/help"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/hint_apps" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textColor="@color/colorGrey"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="@dimen/sign_text_size"
            android:textColor="@color/colorGrey"
            android:textAllCaps="false"
            android:background="@drawable/button_sign_design"
            android:onClick="launchLoginActivity"
            />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/sign_text_size"
            android:textColor="@color/colorGrey"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_sign_design"
            android:onClick="launchSignUpActivity"
            />

    </LinearLayout>

</RelativeLayout>