<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/new_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/analysis"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textColor="@color/colorGrey"
        />

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:indeterminate="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        >

        <Button
            android:id="@+id/disconnect"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/logout"
            />

        <Button
            android:id="@+id/history_button"
            android:layout_width="225dp"
            android:layout_height="80dp"
            android:text="@string/show_activities_history"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey"
            android:textSize="20sp"
            android:background="@drawable/button_sign_design"
            />

    </LinearLayout>

    <Button
        android:id="@+id/add_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_check"
        android:textAllCaps="false"
        android:textColor="@color/colorGrey"
        android:textSize="20sp"
        android:background="@drawable/button_sign_design"
        android:layout_marginTop="30dp"
        android:onClick="notify"
        />
    
</LinearLayout>