<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/case_icon"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:gravity="center"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_item_round"
                    >

                    <ImageView
                        android:id="@+id/icon_activity"
                        android:layout_width="@dimen/image_notification_size"
                        android:layout_height="@dimen/image_notification_size"
                        android:padding="4dp"
                        android:src="@drawable/item_unknow_icon"
                        android:contentDescription="@string/real_activity"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/time_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/basic_time"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_historic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/case_icon"
                android:orientation="vertical"
                android:paddingEnd="60dp"
                android:gravity="center|left"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                tools:ignore="RelativeOverlap,RtlHardcoded,RtlSymmetry">

                <TextView
                    android:id="@+id/real_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/item_activity_title"
                    />

                <TextView
                    android:id="@+id/sensors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensors_used"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTop_item"
                        android:background="@color/colorPrimary"
                        android:paddingLeft="@dimen/padding_item_expected"
                        android:paddingRight="@dimen/padding_item_expected"
                        android:text="@string/expected"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/expected_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTop_item"
                        android:text="@string/activity"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/separation_icon"
                android:layout_width="15dp"
                android:layout_height="100dp"
                android:layout_marginEnd="45dp"
                android:src="@drawable/spear"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/validate_symbol"
                />


            <ImageView
                android:id="@+id/icon_found"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="4dp"
                android:src="@drawable/validate"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/validate_symbol"
                />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>