<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/new_background"
    >

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/help"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/hint_projet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="60dp"
                android:text="@string/login"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/sign_text_size"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/pseudo"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sign_text_size"
                android:background="@drawable/button_log_design"
                android:layout_marginStart="20dp"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorGrey"
                android:textSize="@dimen/sign_text_size"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/sign_text_size"
                android:background="@drawable/button_log_design"
                android:layout_marginStart="15dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            >

            <Button
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/back"
                android:layout_marginEnd="60dp"
                tools:ignore="ButtonStyle"
                android:onClick="backToHome"
                />

            <Button
                android:id="@+id/validate_connect"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/button_validate"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>